--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <link rel="manifest" href="/site.webmanifest" />
-    <link rel="stylesheet" href="./css/style.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="icon" type="image/x-icon" href="./img/logo-icon.svg">
   </head>
@@ -48,7 +48,7 @@
               </li>
             </ul>
           </nav>
-          <a class="orange-button orange" href="#" data-aos="zoom-in"
+          <a class="orange-button  orange" href="#" data-aos="zoom-in"
           >Qabulga yozilish </a>
         </div> 
         <svg class="header-burger"  width="32" height="32" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.5 3C1.22386 3 1 3.22386 1 3.5C1 3.77614 1.22386 4 1.5 4H13.5C13.7761 4 14 3.77614 14 3.5C14 3.22386 13.7761 3 13.5 3H1.5ZM1 7.5C1 7.22386 1.22386 7 1.5 7H13.5C13.7761 7 14 7.22386 14 7.5C14 7.77614 13.7761 8 13.5 8H1.5C1.22386 8 1 7.77614 1 7.5ZM1 11.5C1 11.2239 1.22386 11 1.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H1.5C1.22386 12 1 11.7761 1 11.5Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
@@ -159,7 +159,7 @@
       <div class="contenir footer-container">
         <a class="logo-text" href="index.html">
           <img
-            src="./images/logo (1).svg"
+            src="./images/logo (3).svg"
             alt=" ansormed logo"
             width="150"
             height="49"
